--- a/frontend-demo/index.html
+++ b/frontend-demo/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page-2.html">About</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="page-4.html">Gallery</a></li>
                 <li><a href="page-3.html">Contact</a></li>
             </ul>
         </nav>
