--- a/frontend-demo/page-4.html
+++ b/frontend-demo/page-4.html
@@ -27,6 +27,7 @@
             
          <!-- Gallery Album -->
         <ul id="album"> 
+           <!--
             <li id="photo">
                 <img src="images/winterland1.jpg">
             </li>
@@ -45,12 +46,36 @@
             <li id="photo">
                 <img src="images/winterland6.jpg">
             </li>
-        </ul>-->
+            -->
+        </ul>
         </main>
         <!-- Footer -->
         <footer>
             &copy; Copyright 2024
         </footer>
     </div>
+<!--gallery script-->
+    <script>
+
+    var photos = []; // Declare an empty array to store image elements
+    var fileNames = []; // Declare an empty array to store image file names
+    var imageList = []; // Declare an empty array to store HTML list that contains an image
+    var image; // Declare an empty variable to store the assembled image list codes
+    var openList = "<li id='photo'>"; // Declare a variable to contain open list tag
+    var closeList = "</li>"; // Declare a variable to contain close list tag
+    // Create a loop to create 6 images starting with index of 0
+for (var i = 0; i < 6; i++) {
+    // Loop body
+    fileNames.push('winterland'+(i+1));
+    //Console.log(fileNames);
+    // Create a loop to create 6 images starting with index of 0
+    photos.push("<img src='images/" + fileNames[i] + ".jpg'>"); // Assemble file name into image element and store in an array
+    image = openList + photos[i] + closeList;
+    imageList.push(image);
+}
+    // Display all six image codes stored in the array
+    document.getElementById("album").innerHTML = imageList.join(" ");
+
+    </script>
 </body>
 </html>
