added digi clock on homepage

--- a/homework-module-1/cliffs.html
+++ b/homework-module-1/cliffs.html
@@ -121,6 +121,7 @@
                 </p>
             </div>
         </footer>
+        <script src="./js/digclock.js"></script>
     </div>
 </body>
 </html>
