--- a/homework-module-1/contact.html
+++ b/homework-module-1/contact.html
@@ -75,9 +75,15 @@
                     <label>How did you hear about us:</label>  
                     <textarea></textarea>
                 </div>
-            
+                    <!--Random Codes-->
+        <div class="randomcode">
+            <input type="text" name="randomcode" placeholder="Enter characters">
+            <p id="codes"></p>
+          </div>
+
+          <div class="button">
                 <div class="button">
-                    <input type="submit" value="Inquire">
+                    <input type="submit" id="submit" value="Inquire">
                 </div> 
             </fieldset>  
             </form>
@@ -120,5 +126,7 @@
             </div>
         </footer>
     </div>
+    <script src="./js/digclock.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
