added digi clock on all pages

--- a/homework-module-1/cliffs.html
+++ b/homework-module-1/cliffs.html
@@ -24,6 +24,10 @@
                 </nav>
             </div>
         </header>
+        <section id="timeofday">
+            <span>Your Current Local Time:</span>
+            <span id="clock"></span>
+    </section>
         <main>
             <h1>California's Greatest Cliffs</h1>
             <p>The greatest cliffs are these four cliffs located in southern California. Each of these cliffs have their own uniqueness and beauty: West Cliff, North Cliff, East Cliff and South Cliff are the pride of California. Each cliff has many amenities to offer visitors such as recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
