--- a/homework-module-1/activities.html
+++ b/homework-module-1/activities.html
@@ -24,6 +24,10 @@
                 </nav>
             </div>
         </header>
+        <section id="timeofday">
+            <span>Your Current Local Time:</span>
+            <span id="clock"></span>
+    </section>
         <main>
             <h1>Activities</h1>
             <p>There are many planned activities at all the cliff sites. Some are scheduled daily, weekly, monthly and yearly. These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department. Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
@@ -114,6 +118,7 @@
                 </p>
             </div>
         </footer>
+        <script src="./js/digclock.js"></script>
     </div>
 </body>
 </html>
