--- a/homework-module-1/contact.html
+++ b/homework-module-1/contact.html
@@ -24,6 +24,10 @@
                 </nav>
             </div>
         </header>
+        <section id="timeofday">
+            <span>Your Current Local Time:</span>
+            <span id="clock"></span>
+    </section>
         <main>
             <h1>Contacting Us</h1>
             <p>
@@ -125,6 +129,7 @@
                 </p>
             </div>
         </footer>
+    
     </div>
     <script src="./js/digclock.js"></script>
     <script src="./js/script.js"></script>
