Module1_week4_Day2_Homework

--- a/homework-module-1/contact.html
+++ b/homework-module-1/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="contact"> 
+<body id="contact" onLoad="diableButton(true)"> 
     <div id="container">
         <header>
             <div class="main-header">
@@ -87,7 +87,7 @@
 
           <div class="button">
                 <div class="button">
-                    <input type="submit" id="submit" value="Inquire">
+                    <input type="submit" id="submit" value="submit">
                 </div> 
             </fieldset>  
             </form>
