Module1_week4_Day3_Assignment changed description of images

--- a/frontend-demo/page-4.html
+++ b/frontend-demo/page-4.html
@@ -22,32 +22,32 @@
             <p>My fourth Paragraph</p>
             <ul id="album">
                 <li class="photo">
-                    <img src="images/winterland1.jpg" alt="winterland1">
+                    <img src="images/winterland1.jpg" alt="Snowland">
                     <p class="photo-title">Snow Land</p>
-                    <div class="photo-description">Most of plants and animals are having their hibernation period, so winter is not full of bright colors, but who says that white, snowy and a bit magical winter is not cool?</div>
+                    <div class="photo-description">Snowland</div>
                 </li>
                 <li class="photo">
-                    <img src="images/winterland2.jpg" alt="winterland2">
+                    <img src="images/winterland2.jpg" alt="Wintery Road">
                     <p class="photo-title">Wintery Road</p>
-                    <div class="photo-description">The most beautiful phenomenon of the winter is snow! You know that the snowflakes are never repeat themselves, they have amazing shapes, that different with each new snowflake.</div>
+                    <div class="photo-description">Wintery Road</div>
                 </li>
                 <li class="photo">
-                    <img src="images/winterland3.jpg" alt="winterland3">
+                    <img src="images/winterland3.jpg" alt="Snowy Drive">
                     <p class="photo-title">Snowy Drive</p>
                     <div class="photo-description">Snowy drive on the road.</div>
                 </li>
                 <li class="photo">
-                    <img src="images/winterland4.jpg" alt="winterland4">
+                    <img src="images/winterland4.jpg" alt="Frosty Path">
                     <p class="photo-title">Frosty Path</p>
                     <div class="photo-description">After an overnight snowstorm.</div>
                 </li>
                 <li class="photo">
-                    <img src="images/winterland5.jpg" alt="winterland5">
+                    <img src="images/winterland5.jpg" alt="Icy Lane">
                     <p class="photo-title">Icy Lane</p>
                     <div class="photo-description">Beautiful white icy lane.</div>
                 </li>
                 <li class="photo">
-                    <img src="images/winterland6.jpg" alt="winterland6">
+                    <img src="images/winterland6.jpg" alt="Chilly Street">
                     <p class="photo-title">Chilly Street</p>
                     <div class="photo-description">Winter in the country.</div>
                 </li>
